--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "poet": "~1.0.0-rc3",
     "markdown": "~0.5.0",
     "jade": "~0.35.0",
-    "express-livereload": "0.0.24"
+    "express-livereload": "0.0.24",
+    "firebase": "~0.6.6"
   }
 }
